<resources>
    <!-- App & Activity names -->
    <string name="app_name">PhotoMap</string>
    <string name="activity_maps_title">Map</string>
    <string name="activity_gallery_title">Gallery</string>
    <string name="activity_settings_title">Settings</string>

    <!-- Navigation app_drawer_actions messages & menu items-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- ActionBar actions -->
    <string name="action_settings">Settings</string>

    <!-- Gallery gallery_bottom_navigation tab-titles -->
    <string name="gallery_tab_title_photos">Photos</string>
    <string name="gallery_tab_title_albums">Albums</string>
    <string name="gallery_tab_title_network">Network</string>

    <!-- Settings sub-menus and descriptions -->

    <!-- Detailed Image Activity -->
    <!-- Labels -->
    <string name="detailed_image_filename_label">File name</string>
    <string name="detailed_image_filepath_label">File path</string>
    <string name="detailed_image_captured_time_label">Captured time</string>
    <string name="detailed_image_geolocation_label">Geolocation</string>
    <string name="detailed_image_orientation_label">Orientation</string>
    <string name="detailed_image_camera_maker_label">Camera maker</string>
    <string name="detailed_image_camera_model_label">Camera model</string>
    <!-- Default values -->
    <string name="detailed_image_filename_default_value">IMG_0000</string>
    <string name="detailed_image_filepath_default_value">/storage/emulated/0/DCIM/IMG_0000</string>
    <string name="detailed_image_captured_time_default_value">01/01/1970 00:00:00</string>
    <string name="detailed_image_geolocation_default_value">49°27\'03.4"N 11°04\'42.6"E, St. Lorenz,
        Lorenzer Pl. 1, 90402 Nürnberg, Germany</string>
    <string name="detailed_image_orientation_default_value">@string/detailed_image_vertical_orientation</string>
    <!-- Additional values -->
    <string name="detailed_image_vertical_orientation">Vertical</string>
    <string name="detailed_image_horizontal_orientation">Horizontal</string>
    <string name="unknown">Unknown</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <!--Others TODO TBR -->
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
